--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -12,7 +12,6 @@
   "address": "Address",
   "addressCity": "City Name",
   "addressDescription": "Include information like phone numbers, email, and shipping addresses",
-  "addressDocking": "Address Docking",
   "addressId": "Address id",
   "addressMore": "Addresses and more",
   "addressTitle": "Save and fill addresses",
@@ -39,7 +38,7 @@
   "auth": "Auth",
   "autoFillTitle": "Auto-fill",
   "available": "Available",
-  "avisPage": "Avis Page",
+  "avisPage": "Opinion Page",
   "batteryDescription": "100%",
   "batteryTitle": "Battery",
   "behindAppBar": "Behind AppBar",
@@ -47,7 +46,6 @@
   "behindNavBar": "Behind NavBar",
   "blendLevelLongText": "Level blends\\nSurface 1x  Background 1x  Scaffold 1x\\n",
   "blendLevelShortText": "Flat\\nall at same level",
-  "boatLoc": "Boat location app",
   "body": "Body",
   "bold": "Bold",
   "bottomAppBar": "BottomAppBar",
@@ -126,7 +124,7 @@
   "createPrivateChat": "Create private chat",
   "createPublicChat": "Create public chat",
   "created": "Created",
-  "cubeUserId": "CubeUserId",
+  "cubeUserId": "Cube User Id",
   "cubeUserName": "enter CubeUser Name",
   "darkAppBarOpacity": "Dark AppBar opacity",
   "darkAppBarStyle": "Dark AppBar style",
@@ -135,7 +133,7 @@
   "darkSurfaceBlendSubTitle": "Adjust the surface, background and \\nscaffold blends",
   "darkSurfaceBlendTitle": "Dark surface blend",
   "darkThemeSurfaceMode": "Dark theme surface mode",
-  "datePickerDialog": "DatePickerDialog",
+  "datePickerDialog": "Date Picker Dialog",
   "day": "Day",
   "defaultBackgroundColorSurface": "Default background color is surface with an onSurface overlay\\ncolor in M2, and primary in M3, with elevation 3.\\nFlexColorScheme component theme default is color scheme\\nbackground, with used surface blend and elevation 0.",
   "defaultLabel": "Default",
@@ -154,13 +152,12 @@
   "dismiss": "Dismiss",
   "display": "Display",
   "displayDescription": "Dark theme, font size, brightness",
-  "displayTitle": "Display",
-  "displayTitleZoom": "DISPLAY ZOOM",
+  "displayTitleZoom": "Display zoom",
   "doNotDisturb": "Do Not Disturb",
   "doNotDisturbDescription": "Off / 1 schedule can turn on automatically",
   "done": "Done",
   "drawer": "Drawer",
-  "drawerTheme": "Drawer theme:",
+  "drawerTheme": "Drawer theme",
   "dropdownButton": "Dropdown button",
   "dropdownFormFieldOption": "Dropdown FormField - Option",
   "dropdownMenu": "DropdownMenu",
@@ -174,19 +171,14 @@
   "email": "Email",
   "emailInvalid": "Invalid email",
   "empty": "Empty",
+  "english": "English",
   "enterAddressCity": "enter a City Name",
   "enterAddressZipCode": "enter a Zip Code",
   "enterCode": "Enter Code",
   "enterCodeSent": "Enter the code shown in your authentication app.",
   "enterDuration": "enter duration",
-  "enterLat": "enter a Latitude",
-  "enterLng": "enter a Longitude",
   "enterLogin": "Enter your login",
-  "enterOwnerName": "enter Owner Name",
-  "enterOwnerPhone": "enter Owner Phone",
   "enterPassword": "Enter your password",
-  "enterRentalDateStart": "enter start rent",
-  "enterRentalDateStop": "enter return date",
   "enterUserEmail": "Enter User Email",
   "enterUserPassword": "Enter User Password",
   "enterUsername": "Enter Username",
@@ -194,15 +186,11 @@
   "expandCollapseTitle": "Expand and collapse",
   "expansionPanelDelete": "To delete this panel, tap the trash can icon",
   "expansionPanelFixed": "This panel is fixed here and cannot be removed. Items\\nnumbered 3 and higher can be removed.",
-  "expansionTileListTitle1": "This is tile number 1",
-  "expansionTileListTitle2": "This is tile number 2",
-  "expansionTileListTitle3": "This is tile number 3",
+  "expansionTileListTitle": "This is tile number",
   "expansionTileSubTitle1": "Trailing expansion arrow icon",
   "expansionTileSubTitle2": "Custom expansion arrow icon",
   "expansionTileSubTitle3": "Leading expansion arrow icon",
-  "expansionTileTitle1": "ExpansionTile 1",
-  "expansionTileTitle2": "ExpansionTile 2",
-  "expansionTileTitle3": "ExpansionTile 3",
+  "expansionTileTitle": "ExpansionTile",
   "explainFlutterM2Color": "Flutter M2 past default color was\\nThemeData.bottomAppBarColor. It was deprecated in\\nFlutter 3.7. New default is colorScheme.surface and\\nelevation 8. In M3 it defaults to colorScheme.surface\\ncolor, elevation 3, no shadow, but with surface elevation\\ntint.",
   "explainUsedColors1": "Material 3 ColorScheme seeding from key colors is OFF and not\\nused. The ColorScheme is based directly on the selected theme",
   "explainUsedColors2": "Light theme Primary color is used to generate the Colorscheme.\\nThis is like using Flutter ColorScheme.fromSeed with the Primary\\ncolor as seed color",
@@ -261,7 +249,7 @@
   "hive": "Hive",
   "home": "Home",
   "httpThree": "HTTP/3",
-  "iadDevTitle": "IAD DEVELOPER APP TESTING",
+  "iadDevTitle": "IAD developer app testing",
   "iconButtonCLoseM3": "This is an IconButton\\nIn M3 tap to close lock",
   "iconButtonOpenM3": "This is an IconButton\\nIn M3 tap to open lock",
   "info": "Info",
@@ -273,7 +261,6 @@
   "labelActionChip": "ActionChip",
   "labelAlarmSettings": "Alarm settings",
   "labelAndroid": "Google Android",
-  "labelAppBar": "AppBar",
   "labelApple": "Apple iOS",
   "labelArchive": "Archive",
   "labelBackground": "Background",
@@ -289,7 +276,6 @@
   "labelChips": "Chips",
   "labelChoiceChip": "ChoiceChip",
   "labelCircleAvatar": "Circle\\nAvatar",
-  "labelDialog": "Dialog",
   "labelDialogBackground": "Dialog\\nBackground",
   "labelDisabledColor": "Disabled\\nColor",
   "labelDisabledSettings": "Disabled settings",
@@ -297,7 +283,6 @@
   "labelElevatedButton": "Elevated\\nButton",
   "labelError": "Error",
   "labelErrorContainer": "Error\\nContainer",
-  "labelFilledButton": "Filled\\nButton",
   "labelFilterChip": "FilterChip",
   "labelFloatingActionButton": "Floating\\nAction\\nButton",
   "labelFocusColor": "Focus\\nColor",
@@ -349,7 +334,7 @@
   "labelSplashColor": "Splash\\nColor",
   "labelSurface": "Surface",
   "labelSurfaceVariant": "Surface\\nVariant",
-  "labelSurveillanceView": "Surveillance view",
+  "labelSurveillanceView": "Sight monitoring",
   "labelSwitch": "Switch",
   "labelTabBarIndicator": "TabBar\\nIndicator",
   "labelTabBarItem": "TabBar\\nItem",
@@ -369,11 +354,9 @@
   "large": "Large",
   "lastLogin": "Last login",
   "lastSelected": "Last Selected",
-  "lat": "Latitude",
   "leaveDialog": "Leave Dialog",
   "level": "Level",
   "levelSurfacesLowScaffoldLongText": "Level surface and background, low scaffold\\nSurface 1x  Background 1x  Scaffold 1/2x\\n",
-  "levelSurfacesLowScaffoldShortText": "Level surfaces\\nlow scaffold",
   "levelSurfacesLowScaffoldVariantDialogLongText": "Tertiary container dialog, low scaffold\\nSurface 1x  Background 1x  Scaffold 1/2x\\nDialog 1x blend of tertiary container color",
   "levelSurfacesLowScaffoldVariantDialogShortText": "Low scaffold\\nTertiaryContainer dialog",
   "lightAppBarOpacity": "Light AppBar opacity",
@@ -383,8 +366,7 @@
   "lightThemeSurfaceMode": "Light theme surface mode",
   "listContacts": "List of Contacts",
   "listMfa": "List of Multi Factor Authentication",
-  "lng": "Longitude",
-  "load": "Load!",
+  "load": "Load",
   "loadNow": "Load now",
   "loading": "Loading...",
   "location": "location",
@@ -463,8 +445,8 @@
   "notificationsLockScreenDescription": "Show conversations, default, and silent",
   "notificationsSnoozing": "Allow notification snoozing",
   "nowSetTo": "Now set to ",
-  "occupants": "occupants",
-  "occupantsIds": "occupants_ids",
+  "occupants": "tenants",
+  "occupantsIds": "tenants_ids",
   "ok": "Ok",
   "open": "Open",
   "openDialog": "Open Dialog",
@@ -522,7 +504,7 @@
   "role": "Role",
   "save": "Save",
   "saveNow": "Save now",
-  "screenWidth": "Screen width:",
+  "screenWidth": "Screen width",
   "search": "Search",
   "searchUsers": "Search Users",
   "secret": "Secret",
@@ -530,7 +512,6 @@
   "securitySafeBrowsingDescription": "Safe Browsing (protection from dangerous sites) and other security settings",
   "securityTitle": "Security",
   "selectDialog": "Select dialog",
-  "selectTypesDocking": "select Types Docking",
   "selectUserGuess": "select a guess User",
   "settings": "Settings",
   "show": "Show",
@@ -563,7 +544,7 @@
   "soundVibrationDescription": "Volume, haptics, Do Not Disturb",
   "soundVibrationTitle": "Sound & vibration",
   "startDialog": "Start dialog",
-  "stateResSettings": "STATE RESTORATION TESTING",
+  "stateResSettings": "State restoration testing",
   "storage": "Storage",
   "storageDescription": "30% used - 5.60 GB free",
   "style": "Style",
@@ -571,7 +552,7 @@
   "success": "Success",
   "successSignedUp": "Successfully signed up",
   "surfaceArea": "enter surface area",
-  "surveillance": "Surveillance",
+  "surveillance": "Monitoring",
   "swapColors": "Swap colors",
   "swapPrimarySecondaryDarkColors": "Swap primary and secondary dark colors",
   "swapPrimarySecondaryLightColors": "Swap primary and secondary light colors",
@@ -582,7 +563,6 @@
   "switchListTileTitle": "SwitchListTile",
   "switchListTileTitleDisabled": "SwitchListTile disabled",
   "switchNoStatusBar": "Only affects Android top status bar",
-  "switchOnlyAndroid": "Don't have account? Sign Up",
   "tabBadgeLabel18": "18",
   "tabBadgeLabel3": "3",
   "tabBadgeLabel99": "99",
@@ -591,10 +571,8 @@
   "tabBarIfSurface": "If the TabBar will always be used on background and surface\\ncolors, then use style FlexTabBarStyle forBackground,\\nit will fit contrast wise here",
   "tabBarSurface": "TabBar in an Surface",
   "tabFolder": "Folder",
-  "tabTasks": "Tasks",
   "tenantId": "Tenant ID",
   "termsOfService": "Terms of Service | Privacy Policy",
-  "textButton": "Text button",
   "textIcon": "Text icon",
   "theme": "Theme",
   "themeColors": "Theme Colors",
@@ -615,11 +593,6 @@
   "tooltipIconComment": "Comment Icon",
   "tooltipIconMenu": "Menu Icon",
   "tooltipIconSettings": "Settings Icon",
-  "tooltipMessageBgScaffold": "High background\\nlow scaffold",
-  "tooltipMessageHighScafLowSur": "High scaffold\nlow surfaces",
-  "tooltipMessageHighScafTertiaryContainerDialog": "High scaffold\\ntertiary container dialog",
-  "tooltipMessageHighScaffold": "High scaffold\\nlevel surface",
-  "tooltipMessageLevel": "Flat\\nall at same level",
   "tooltipMessageLevelSurfaces": "Level surfaces\\nlow scaffold",
   "tooltipMessageScaffold": "High scaffold\\nlow surface",
   "tooltipMessageSurface": "High surface\\nlow scaffold",
@@ -634,7 +607,7 @@
   "tooltipStandard": "Standard",
   "tooltipStandardDisabled": "Standard (disabled)",
   "uiAutomationEnable": "Enable UI Automation",
-  "uiAutomationTitle": "UI AUTOMATION",
+  "uiAutomationTitle": "UI Automation",
   "ukctbTooltipMessP": "Use light theme Primary color\\nas key color to seed your ColorScheme",
   "ukctbTooltipMessS": "Use light theme Secondary color\\nas key color to seed your ColorScheme",
   "ukctbTooltipMessT": "Use light theme Tertiary color\\nas key color to seed your ColorScheme",
@@ -659,13 +632,11 @@
   "useTrueBlack": "Use true black",
   "usedPlatformMechanics": "Used platform mechanics",
   "userAnonymous": "User is anonymous",
-  "userEmail": "Email",
   "userFirstName": "User First Name",
   "userId": "UserId",
   "userInfo": "User info",
   "userName": "Name",
   "userNotFound": "Couldn't find user",
-  "userPassword": "Password",
   "valueFive": "five",
   "valueFour": "four",
   "valueOne": "one",
@@ -678,7 +649,6 @@
   "verify": "Verify",
   "viewDescription": "Choose a view for iPhone.\\nZoomed shadows larger controls.\\nStandard shows more content.",
   "viewTitle": "View",
-  "viewValue": "Standard",
   "volume": "Volume",
   "wallpaperStyleDescription": "Colors, themed icons, app grid",
   "wallpaperStyleTitle": "Wallpaper & style",
